<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_main_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_fateful_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fateful_hour"
            android:textColor="#FF9912"
            android:textSize="20dp"
            android:visibility="invisible"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/tv_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life"
            android:textSize="100dp"
            android:textAlignment="center"
            />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_life"
        android:layout_below="@+id/ll_main_life"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_life_less"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/life_less"/>
            <Button
                android:id="@+id/btn_life_plus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/life_plus"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_life3"
            android:layout_below="@+id/ll_life"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_life_less3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/life_less3"/>
            <Button
                android:id="@+id/btn_life_plus3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/life_plus3"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_life5"
            android:layout_below="@+id/ll_life3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_life_less5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/life_less5"/>
            <Button
                android:id="@+id/btn_life_plus5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/life_plus5"/>
        </LinearLayout>


    </LinearLayout>
    <Button
        android:id="@+id/btn_reset"
        android:layout_below="@id/ll_life"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"/>

</RelativeLayout>
